# plant-benchmarking

./: README.md  app.py  build_benchmark.py  build_datasets.py  extract_data.py  pyproject.toml  requirements.txt
data/: benchmark_9plants.csv  raw_extracted.json  timeseries.csv
