[project]
name = "uprvunl-plant-benchmarking"
version = "1.0.0"
description = "Technical & Financial Analysis Dashboard for UPRVUNL Coal Thermal Power Stations"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.38",
    "pandas>=2.2",
    "plotly>=5.24",
    "openpyxl>=3.1",
    "statsmodels>=0.14",
]

[tool.uv]
package = false
